--- a/public/index.html
+++ b/public/index.html
@@ -8,23 +8,14 @@
     <link rel="icon" href="/favicon.ico" />
   </head>
   <body>
-    <div id="hello-wrapper">
-      <div id="particles-js"></div>
-      <div class="content position-absolute w-100 top-0 pt-5">
-        <div class="cta">
-          <div id="hello" class="typewriter pb-3">
-            AR Easy Button
-          </div>
-          <a class="btn btn-primary mb-5" href="#">Send Signal</a>
-        </div>
-      </div>
-    </div>
-    <!--<script type='text/javascript' src='//d3js.org/d3.v3.min.js'></script>
-    <script type='text/javascript' src='//d3js.org/topojson.v1.min.js'></script>
-    <script type='text/javascript' src='planetaryjs.min.js'></script>-->
+		<div class="content position-absolute w-100 top-0 pt-5">
+			<div class="cta">
+				<div id="hello" class="typewriter pb-3">
+					AR Easy Button
+				</div>
+				<a class="btn btn-primary btn-lg text-uppercase mb-5" href="#">Send Signal</a>
+			</div>
+		</div>
     <script src="//cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <!--<script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script type='text/javascript' src='particles.js'></script>
-    <script type='text/javascript' src='globe.js'></script>-->
   </body>
 </html>
