--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,10 @@
     <link rel="icon" href="/favicon.ico" />
   </head>
   <body>
-		<div class="content position-absolute w-100 top-0 pt-5">
+		<div class="content position-absolute w-100 h-100 top-0">
 			<div class="cta">
-				<div id="hello" class="typewriter pb-3">
-					AR Easy Button
-				</div>
-				<a class="btn btn-primary btn-lg text-uppercase mb-5" href="#">Send Signal</a>
+				<h1 class="mb-5">AR Easy Button</h1>
+				<a class="btn btn-primary btn-lg text-uppercase" href="#">Send Signal</a>
 			</div>
 		</div>
     <script src="//cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
